# student_enrollment_system_fastapi

./: README.md  database.py  main.py  pyproject.toml  requirements.txt
client/vite-project/: package-lock.json  package.json  vite.config.js
client/vite-project/src/: App.jsx  index.css
client/vite-project/src/components/: Navbar.jsx
client/vite-project/src/context/: AuthContext.jsx
client/vite-project/src/pages/: Dashboard.jsx  Home.jsx  InstructorDashboard.jsx  Login.jsx  Register.jsx  StudentDashboard.jsx  VerifyEmail.jsx
client/vite-project/src/services/: api.js
config/: settings.py
controllers/: auth_controller.py  course_controller.py  enrollment_controller.py
routes/: auth_routes.py  course_routes.py  enrollment_routes.py
schemas/: course_schema.py  enrollment_schema.py  user_schema.py
services/: auth_service.py  course_service.py  enrollment_service.py
utils/: dependencies.py  email.py  hash.py  jwt_handler.py
